--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
   </template>
 
   <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script src="/app.js"></script>
 </body>
 </html>
