--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
   <!-- Icons / PWA -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   <link rel="manifest" href="/manifest.webmanifest">
-  <meta name="theme-color" content="#0f1115">
+  <meta name="theme-color" content="#0e0f12">
 
-  <!-- Preconnects for speed -->
+  <!-- Preconnects -->
   <link rel="preconnect" href="https://docs.google.com" crossorigin>
   <link rel="preconnect" href="https://wsrv.nl" crossorigin>
-  <link rel="preconnect" href="https://en.wikipedia.org" crossorigin>
   <link rel="dns-prefetch" href="https://docs.google.com">
   <link rel="dns-prefetch" href="https://wsrv.nl">
-  <link rel="dns-prefetch" href="https://en.wikipedia.org">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -84,13 +82,10 @@
     </div>
   </dialog>
 
-  <!-- PapaParse (CSV) -->
-  <script defer src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-
   <!-- App -->
   <script defer src="/app.js"></script>
 
-  <!-- Service worker (optional but recommended) -->
+  <!-- Service worker for repeat-visit speed (optional) -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
