--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
     <section id="scrollView" class="view view-scroll active" aria-label="Scroll view">
       <div id="scrollerWrap" class="scroller-wrap">
         <button id="scrollPrev" class="nav-arrow left" aria-label="Previous">
-          <span class="chev chev-left"></span>
+          <!-- Sleek chevron (SVG) -->
+          <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M15.5 5L8.5 12l7 7" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
         </button>
         <div id="scroller" class="scroller" tabindex="0" role="list"></div>
         <button id="scrollNext" class="nav-arrow right" aria-label="Next">
-          <span class="chev chev-right"></span>
+          <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M8.5 19l7-7-7-7" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
         </button>
       </div>
     </section>
@@ -76,7 +81,8 @@
   <!-- Stats -->
   <dialog id="statsModal">
     <div class="stats-card">
-      <button type="button" class="stats-close" aria-label="Close">×</button>
+      <!-- Top-right button only -->
+      <button type="button" class="stats-close btn ghost small" aria-label="Close">Close</button>
       <h2>Collection Stats</h2>
       <div id="statsBody" class="stats-body"></div>
     </div>
@@ -85,13 +91,13 @@
   <!-- App -->
   <script defer src="/app.js"></script>
 
-  <!-- Service worker for repeat-visit speed (optional) -->
+  <!-- Service worker (optional) -->
   <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js').catch(()=>{});
-      });
-    }
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/sw.js').catch(()=>{});
+    });
+  }
   </script>
 </body>
 </html>
