--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </select>
 
         <button id="shuffle" class="btn">Shuffle</button>
-        <a id="sheetLink" class="btn ghost"
+        <a id="sheetLink" class="btn"
            href="https://docs.google.com/spreadsheets/d/1wNsjoZ5UcucOrTUokWfETyx_C5xMKtwWZ7LeDjdi6sI/edit?usp=sharing"
            target="_blank" rel="noopener">Google Sheet</a>
         <button id="statsBtn" class="btn">Stats</button>
