--- a/index.html
+++ b/index.html
@@ -4,24 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vinyl Collection</title>
-
-  <!-- Icons / PWA -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   <link rel="manifest" href="/manifest.webmanifest">
-  <meta name="theme-color" content="#0e0f12">
-
-  <!-- Preconnects -->
-  <link rel="preconnect" href="https://docs.google.com" crossorigin>
-  <link rel="preconnect" href="https://wsrv.nl" crossorigin>
-  <link rel="dns-prefetch" href="https://docs.google.com">
-  <link rel="dns-prefetch" href="https://wsrv.nl">
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet" />
-
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/styles.css">
+  <meta name="theme-color" content="#0F1218">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="site-header">
@@ -35,70 +24,71 @@
 
       <div class="btn-row">
         <div class="segmented" role="tablist" aria-label="View toggle">
-          <button id="view-scroll" class="seg-btn active" role="tab" aria-selected="true">View: Scroll</button>
-          <button id="view-grid"   class="seg-btn" role="tab" aria-selected="false">View: Grid</button>
+          <button id="viewScroll" class="btn seg-btn active" role="tab" aria-selected="true">View: Scroll</button>
+          <button id="viewGrid"   class="btn seg-btn"         role="tab" aria-selected="false">View: Grid</button>
         </div>
 
-        <select id="sort" class="btn">
+        <select id="sortSelect" class="btn">
           <option value="title">Sort: Title</option>
           <option value="artist">Sort: Artist</option>
         </select>
 
-        <button id="shuffle" class="btn">Shuffle</button>
-        <a id="sheetLink" class="btn"
-           href="https://docs.google.com/spreadsheets/d/1wNsjoZ5UcucOrTUokWfETyx_C5xMKtwWZ7LeDjdi6sI/edit?usp=sharing"
-           target="_blank" rel="noopener">Google Sheet</a>
-        <button id="statsBtn" class="btn">Stats</button>
+        <button id="btnShuffle" class="btn">Shuffle</button>
+
+        <a id="btnSheet" class="btn" href="https://docs.google.com/spreadsheets/d/1wNsjoZ5UcucOrTUokWfETyx_C5xMKtwWZ7LeDjdi6sI/edit?usp=sharing" target="_blank" rel="noopener">Google Sheet</a>
+
+        <button id="btnStats" class="btn">Stats</button>
       </div>
     </div>
   </header>
 
   <main>
     <!-- Scroll view -->
-    <section id="scrollView" class="view view-scroll active" aria-label="Scroll view">
-      <div id="scrollerWrap" class="scroller-wrap">
-        <button id="scrollPrev" class="nav-arrow left" aria-label="Previous">
-          <!-- Sleek chevron (SVG) -->
-          <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M15.5 5L8.5 12l7 7" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-        </button>
-        <div id="scroller" class="scroller" tabindex="0" role="list"></div>
-        <button id="scrollNext" class="nav-arrow right" aria-label="Next">
-          <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M8.5 19l7-7-7-7" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-        </button>
-      </div>
+    <section class="view scroller-wrap active" aria-label="Scroll view">
+      <button class="nav-arrow left" aria-label="Previous"><span class="chev chev-left"></span></button>
+      <div class="scroller" id="scroller" role="list"></div>
+      <button class="nav-arrow right" aria-label="Next"><span class="chev chev-right"></span></button>
     </section>
 
     <!-- Grid view -->
-    <section id="gridView" class="view view-grid" aria-label="Grid view">
+    <section class="view grid-wrap" aria-label="Grid view">
       <div id="grid" class="grid" role="list"></div>
     </section>
   </main>
 
   <!-- Stats -->
-<dialog id="statsModal">
-  <form method="dialog" class="stats-card">
-    <h2>Collection Stats</h2>
-    <div id="statsBody" class="stats-body"></div>
+  <dialog id="statsModal">
+    <form method="dialog" class="stats-card">
+      <h2>Collection Stats</h2>
+      <button class="btn dialog-close" value="close" aria-label="Close">Close</button>
+      <div id="statsBody" class="stats-body"></div>
+    </form>
+  </dialog>
 
-    <!-- Single Close (top-right) -->
-    <button class="btn dialog-close" value="close" aria-label="Close">Close</button>
-  </form>
-</dialog>
+  <!-- Card template -->
+  <template id="cardTpl">
+    <article class="card" role="listitem" tabindex="0">
+      <div class="sleeve" aria-live="polite">
+        <div class="face front">
+          <div class="cover-skel"></div>
+          <img class="cover" alt="" loading="lazy" decoding="async" referrerpolicy="no-referrer">
+        </div>
+        <div class="face back">
+          <div class="meta">
+            <h3 class="title"></h3>
+            <p class="artist"></p>
+            <div class="genre"></div>
+            <p class="notes"></p>
+          </div>
+        </div>
+      </div>
+      <div class="caption">
+        <div class="caption-title"></div>
+        <div class="caption-artist"></div>
+      </div>
+    </article>
+  </template>
 
-  <!-- App -->
-  <script defer src="/app.js"></script>
-
-  <!-- Service worker (optional) -->
-  <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js').catch(()=>{});
-    });
-  }
-  </script>
+  <script src="/app.js"></script>
 </body>
 </html>
