--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         </select>
 
         <button id="shuffle" class="btn">Shuffle</button>
+        <!-- NEW: Update button -->
+        <button id="refresh" class="btn">Update Collection</button>
 
         <a id="sheetLink" class="btn"
            href="https://docs.google.com/spreadsheets/d/1wNsjoZ5UcucOrTUokWfETyx_C5xMKtwWZ7LeDjdi6sI/edit?usp=sharing"
@@ -99,7 +101,7 @@
           <button class="btn" id="manualUPC">Enter UPC Manually</button>
         </div>
 
-        <!-- New: confirmation form (fills after lookup; user reviews/edits, then saves) -->
+        <!-- Confirmation form -->
         <form id="scanForm" class="scan-form">
           <div class="form-grid">
             <div class="form-item">
